# NOVAOnboarding

./: .bashrc  .gitignore  README.md  chaseTurt_launch.py  initTurt_launch.py
adipu_ws/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
adipu_ws/install/adipu_msg/share/adipu_msg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
adipu_ws/install/adipu_msg/share/adipu_msg/cmake/: adipu_msgConfig-version.cmake  adipu_msgConfig.cmake  adipu_msg__rosidl_typesupport_cppExport-noconfig.cmake  adipu_msg__rosidl_typesupport_cppExport.cmake  adipu_msg__rosidl_typesupport_introspection_cExport.cmake  adipu_msg__rosidl_typesupport_introspection_cppExport.cmake  ament_cmake_export_dependencies-extras.cmake  rosidl_cmake-extras.cmake  (+9 more)
adipu_ws/install/adipu_turtlesim_controller/lib/adipu_turtlesim_controller/: chase_run_node  chaser_flipper  chaser_flipper_node  chaser_node  mouse_follow_node  mouse_follower.py  mouse_test  turtle1_chaser.py  turtle2_flipper.py
adipu_ws/install/adipu_turtlesim_controller/share/adipu_turtlesim_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
adipu_ws/log/: latest_build
adipu_ws/src/adipu_msg/: CMakeLists.txt  package.xml
adipu_ws/src/adipu_turtlesim_controller/: package.xml  setup.cfg  setup.py
adipu_ws/src/adipu_turtlesim_controller/adipu_turtlesim_controller/: mouse_follower.py  turtle1_chaser.py  turtle2_flipper.py
(+97 files in other folders)
