<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adipu_turtlesim_controller</name>
  <version>0.0.0</version>
  <description>Package that includes mouse follower node for turtle 1, as well as chaser for turtle 2 and flipMode node for turtle 2 chasing/running away</description>
  <maintainer email="adipu@utexas.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>adipu_msg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
